<resources>
    <string name="app_name">Tattoo Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tattoo Assistant</string>
    <string name="nav_header_subtitle">Scheduling App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Reports</string>

    <string name="menu_terms">Terms</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_assessments">Assessments</string>
    <string name="menu_mentors">Mentors</string>
    <string name="menu_tools">Reports</string>

    <string name="view_term_list">Manage Terms</string>
    <string name="title_item_list">Terms</string>
    <string name="title_item_detail">Term Detail</string>
    <string name="title_activity_term_editor">Term Editor</string>

    <string name="view_course_list">Manage Courses</string>
    <string name="title_course_list">Customers</string>
    <string name="title_course_detail">Course Detail</string>
    <string name="title_activity_course_editor">Customer Editor</string>

    <string name="view_assessment_list">Manage Assessment</string>
    <string name="title_assessment_list">Appointments</string>
    <string name="title_assessment_detail">Assessment Detail</string>
    <string name="title_activity_assessment_editor">Appointment Editor</string>

    <string name="title_activity_mentor_editor">Mentor Editor</string>

    <string name="title_note_detail">Note Detail</string>
    <string name="title_activity_note_editor">Note Editor</string>

    <string name="title_activity_settings">Reports</string>

    <string name="title_activity_sharing">Share a Note</string>
    <string name="nav_communicate">Communicate</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="courses">Courses</string>
    <string name="add_course">Add Course</string>
    <string name="select_date">Select Date</string>
    <string name="view_assessments">View Assessments</string>
    <string name="view_courses">View Courses</string>
    <string name="view_terms">View Terms</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="mentor_phone">Mentor Phone</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Your Name</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_email_address">Email address</string>
    <string name="pref_default_email_address">yourname@yourhost.com</string>
    <string name="pref_title_favorite_social">Favorite social network</string>
    <string-array name="pref_entries_favorite_social">
        <item>Google+</item>
        <item>Facebook</item>
        <item>Twitter</item>
    </string-array>
    <string-array name="pref_values_favorite_social">
        <item>http://plus.google.com</item>
        <item>http://facebook.com</item>
        <item>http://twitter.com</item>
    </string-array>
    <string name="pref_default_favorite_social">http://plus.google.com</string>

    <!-- Calendar Strings -->
    <string name="new_event">New Event</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="no_events">no events</string>
    <string name="event_default_title">My event</string>
    <string name="today">today</string>
    <string name="menu_calendar">Monthly Calendar</string>
    <string name="title_activity_Calendar">Monthly Calendar</string>
    <string name="set">set</string>
    <string name="double_dots" translatable="false">:</string>
    <string name="select_color_instruction">Select color of event</string>
    <string name="title">Title</string>
    <string name="completed">Completed</string>
    <string name="title_activity_mini_calendar_view_popup">Pop up Calendar</string>
    <string name="view_calendar">View Calendar</string>
    <string name="view_appointments">Add Appointment</string>
    <string name="view_customers">Add Customer</string>
    <string name="select_time">Select Time</string>
    <string name="menu_appointments">Appointment List</string>
    <string name="menu_customers">Customer List</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="weekly">Weekly</string>
</resources>
