<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_nav_mentors"
            android:title="@string/menu_customers" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_nav_courses"
            android:title="@string/menu_appointments" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_nav_terms"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_nav_alerts"
            android:title="@string/menu_tools" />
    </group>
</menu>
