<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.Activity.MainActivity"
    tools:showIn="@layout/activity_main"
    android:gravity="center">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp" >

            <TextView
                android:id="@+id/label_customers"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_customers" />

            <ImageButton
                android:background="@color/transparent"
                android:layout_gravity="bottom"
                android:id="@+id/btn_customers"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:onClick="showCustomers"
                android:src="@drawable/ic_home_term"
                android:contentDescription="@string/view_customers" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp" >

            <TextView
                android:id="@+id/label_appointments"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_appointments" />

            <ImageButton
                android:background="@color/transparent"
                android:layout_gravity="bottom"
                android:id="@+id/btn_appointments"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:onClick="showAppointments"
                android:src="@drawable/ic_home_course"
                android:contentDescription="@string/view_appointments" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp" >

            <TextView
                android:id="@+id/label_calendar"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_calendar" />

            <ImageButton
                android:background="@color/transparent"
                android:layout_gravity="bottom"
                android:id="@+id/btn_assessments"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:onClick="showCalendar"
                android:src="@drawable/ic_home_assessment"
                android:contentDescription="@string/view_calendar" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>